# endor-aspects-it

./: .bazelignore  .gitignore
rules_go/0.42.0/: WORKSPACE
rules_go/0.42.0-bzlmod/: WORKSPACE
rules_go/0.42.0-bzlmod/cmd/: BUILD.bazel
rules_java/5.1.0/: .bazelrc  BUILD.bazel  WORKSPACE
rules_java/5.1.0-bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel  maven_install.json  pom.xml  rules_jvm_external~~maven~maven_install.json
rules_java/5.1.0-bzlmod/src/main/java/com/example/: App.java  BUILD.bazel
rules_js/3.0.3-bzlmod/: BUILD.bazel  MODULE.bazel  README.md  index.html  package.json  pnpm-lock.yaml
rules_js/3.0.3-bzlmod/src/: App.jsx  BUILD.bazel
rules_js/3.0.3-bzlmod/src/assets/: BUILD.bazel
rules_js/3.0.3-bzlmod/src/components/atoms/: BUILD.bazel  FileUploadButton.jsx  ImagePreview.jsx
rules_js/3.0.3-bzlmod/src/components/molecules/: BUILD.bazel  ImageComparison.jsx  ImageUploader.jsx
rules_js/3.0.3-bzlmod/src/components/organisms/: BUILD.bazel  ImageResizerCard.jsx
rules_js/3.0.3-bzlmod/src/components/templates/: BUILD.bazel  MainLayout.jsx
rules_js/3.0.3-bzlmod/src/utils/: BUILD.bazel  imageResizer.js
rules_rust/0.56.0-bzlmod/: .bazelignore  Cargo.toml  MODULE.bazel
rules_rust/0.56.0-bzlmod/src/: BUILD.bazel  main.rs
rules_rust/0.56.0-bzlmod/src/db/: BUILD.bazel  Cargo.toml  database.rs  mod.rs  record.rs
rules_rust/0.56.0-bzlmod/src/http/: BUILD.bazel  Cargo.toml  client.rs  mod.rs  response.rs
rules_rust/0.56.0-bzlmod/src/utils/: BUILD.bazel  Cargo.toml  encoding.rs  mod.rs  random.rs  validation.rs
rules_scala/5.0.0-bzlmod/: .bazelrc  MODULE.bazel  spacework
rules_swift/2.2.0-Workspace/: .bazelrc  Package.resolved  Package.swift  WORKSPACE
rules_swift/2.2.0-Workspace/Sources/Models/: BUILD.bazel
rules_swift/2.2.0-Workspace/Sources/Networking/: BUILD.bazel  Networking.swift
rules_swift/2.2.0-Workspace/Sources/Proto/: BUILD.bazel
rules_swift/2.2.0-Workspace/Sources/VulnDemoApp/: BUILD.bazel  main.swift
rules_swift/2.2.0-Workspace/Sources/VulnDemoLib/: ArchiveHelper.swift  BUILD.bazel  HTTPHelper.swift
rules_swift/2.2.0-Workspace/Tests/VulnDemoTests/: BUILD.bazel  VulnDemoTests.swift
rules_swift/3.5.0/: .bazelrc  BUILD.bazel  MODULE.bazel
rules_swift/3.5.0/Sources/Models/: BUILD.bazel  Models.swift
rules_swift/3.5.0/Sources/Networking/: BUILD.bazel
rules_swift/3.5.0/Sources/Proto/: BUILD.bazel  demo.proto
rules_swift/3.5.0/Sources/VulnDemoApp/: BUILD.bazel
rules_swift/3.5.0/Sources/VulnDemoLib/: ArchiveHelper.swift  BUILD.bazel  JWTHelper.swift  TemplateHelper.swift
rules_swift/3.5.0/Tests/VulnDemoTests/: BUILD.bazel
rules_ts/1.0.0-bzlmod/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  pnpm-lock.yaml
rules_ts/1.0.0-bzlmod/src/: BUILD.bazel  app.ts
rules_ts/1.0.0-bzlmod/src/api/: server.ts
rules_ts/1.1.0-WORKSPACE/: .bazelrc  WORKSPACE  package.json  tsconfig.json
rules_ts/1.1.0-WORKSPACE/src/api/: BUILD.bazel
rules_ts/1.1.0-WORKSPACE/src/core/: BUILD.bazel  tsconfig.json  types.ts  utils.ts
