module(
    name = "example",
    version = "0.0.1",
)

bazel_dep(name = "rules_jvm_external", version = "6.0")
bazel_dep(name = "rules_java", version = "7.2.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "com.google.guava:guava:33.0.0-jre",
        "org.apache.commons:commons-lang3:3.14.0",
        "org.slf4j:slf4j-api:2.0.12",
        "org.slf4j:slf4j-simple:2.0.12",
        "com.fasterxml.jackson.core:jackson-databind:2.16.1",
        "com.squareup.okhttp3:okhttp:4.12.0",
        "commons-io:commons-io:2.15.1",
        "joda-time:joda-time:2.12.7",
        "com.google.code.gson:gson:2.10.1",
        "org.json:json:20231013",
    ],
    lock_file = "//:rules_jvm_external~~maven~maven_install.json",
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)

use_repo(maven, maven_deps = "maven")

java_toolchains = use_extension("@rules_java//java:extensions.bzl", "toolchains")
use_repo(java_toolchains, "remotejdk17_macos_aarch64", "remotejdk17_macos_aarch64_toolchain_config_repo")
register_toolchains("@remotejdk17_macos_aarch64_toolchain_config_repo//:all")

