load("@aspect_rules_js//js:defs.bzl", "js_run_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:vite/package_json.bzl", "bin")

package(default_visibility = ["//visibility:public"])

npm_link_all_packages()

js_run_binary(
    name = "build",
    srcs = [
        "index.html",
        "package.json",
        "//src:app",
    ],
    args = ["build"],
    mnemonic = "ViteBuild",
    out_dirs = ["dist"],
    tool = ":vite",
)

bin.vite_binary(
    name = "vite",
    chdir = package_name(),
    data = [
        "vite.config.js",
        ":node_modules/@vitejs/plugin-react",
        ":node_modules/vite",
    ],
)

bin.vite_binary(
    name = "preview",
    args = ["preview"],
    chdir = package_name(),
    data = [
        ":build",
        ":node_modules/@vitejs/plugin-react",
        ":node_modules/vite",
    ],
)
