module(
    name = "rules_rust-0.56.0-bzlmod",
    version = "0.0.1",
)

bazel_dep(name = "rules_rust", version = "0.56.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.77.0"],
)
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//src/db:Cargo.toml",
        "//src/http:Cargo.toml",
        "//src/utils:Cargo.toml",
    ],
)
use_repo(crate, "crates")
