module(
    name = "bazel_ts_example",
    version = "0.0.1",
)

bazel_dep(name = "aspect_rules_js", version = "2.3.8")
bazel_dep(name = "aspect_rules_ts", version = "3.8.8")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")
bazel_dep(name = "rules_nodejs", version = "6.7.3")
bazel_dep(name = "bazel_skylib", version = "1.8.2")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
npm.npm_translate_lock(
    name = "npm",
    pnpm_lock = "//:pnpm-lock.yaml",
)
use_repo(npm, "npm")

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
rules_ts_ext.deps(ts_version_from = "//:package.json")
use_repo(rules_ts_ext, "npm_typescript")

# =============================================================================
# NON-HERMETIC TOOLCHAIN (commented out — for reference only)
# =============================================================================
# WARNING: Non-hermetic builds break reproducibility. Different machines may
# have different node/tsc versions, leading to "works on my machine" bugs.
#
# --- Pattern 1: Use host machine's Node.js instead of hermetic download ---
#
# node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
# node.toolchain(
#     name = "nodejs",
#     node_version = "host",  # Uses whatever node is on the host $PATH
# )
#
# --- Pattern 2: Use host machine's tsc instead of Bazel-managed TypeScript ---
#
# rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext")
# rules_ts_ext.deps(
#     ts_version = None,  # Skips downloading TypeScript, uses host tsc
# )
#
# --- Pattern 3: Leak host env into npm lifecycle hooks ---
#
# npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm")
# npm.npm_translate_lock(
#     name = "npm",
#     pnpm_lock = "//:pnpm-lock.yaml",
#     lifecycle_hooks_use_default_shell_env = True,  # Leaks host env into actions
# )
# use_repo(npm, "npm")
