load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "app",
    srcs = [
        "App.css",
        "App.jsx",
        "index.css",
        "main.jsx",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@mui/icons-material",
        "//:node_modules/@mui/material",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//:node_modules/react-dropzone",
        "//:node_modules/react-helmet-async",
        "//:node_modules/react-hot-toast",
        "//src/components/organisms",
        "//src/components/templates",
    ],
)
