load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "http",
    srcs = [
        "client.rs",
        "mod.rs",
        "response.rs",
    ],
    crate_root = "mod.rs",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:serde",
        "@crates//:serde_json",
    ],
)
