load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "utils",
    srcs = [
        "encoding.rs",
        "mod.rs",
        "random.rs",
        "validation.rs",
    ],
    crate_root = "mod.rs",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:base64",
        "@crates//:rand",
        "@crates//:regex",
        "@crates//:uuid",
    ],
)
