load("@build_bazel_rules_swift//swift:swift_library.bzl", "swift_library")

swift_library(
    name = "VulnDemoLib",
    srcs = glob(["*.swift"]),
    module_name = "VulnDemoLib",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/Models",
        "//Sources/Networking",
        "@jose_swift//:JSONWebAlgorithms",
        "@jose_swift//:JSONWebKey",
        "@jose_swift//:JSONWebSignature",
        "@jose_swift//:JSONWebToken",
        "@leaf_kit//:LeafKit",
        "@swift_nio_http2//:NIOHTTP2",
        "@SSZipArchive//:SSZipArchive",
    ],
)
