load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

# Level 0 (leaf): core utilities
# PURL patterns: unscoped (lodash, uuid, date-fns, zod), scoped @types/*
ts_project(
    name = "core",
    srcs = [
        "types.ts",
        "utils.ts",
    ],
    declaration = True,
    visibility = ["//src:__subpackages__"],
    deps = [
        "//:node_modules/@types/lodash",
        "//:node_modules/@types/uuid",
        "//:node_modules/date-fns",
        "//:node_modules/lodash",
        "//:node_modules/uuid",
        "//:node_modules/zod",
    ],
)
