load("@aspect_rules_js//js:defs.bzl", "js_library")

js_library(
    name = "organisms",
    srcs = [
        "ImageResizerCard.jsx",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//:node_modules/@mui/icons-material",
        "//:node_modules/@mui/material",
        "//:node_modules/file-saver",
        "//:node_modules/react",
        "//:node_modules/react-dropzone",
        "//:node_modules/react-hot-toast",
        "//src/components/molecules",
        "//src/utils",
    ],
)
