load("@rules_jvm_external//:defs.bzl", "artifact")

java_binary(
    name = "app",
    srcs = ["App.java"],
    main_class = "com.example.App",
    visibility = ["//visibility:public"],
    deps = [
        artifact("com.google.guava:guava", repository_name = "maven_deps"),
        artifact("org.apache.commons:commons-lang3", repository_name = "maven_deps"),
        artifact("org.slf4j:slf4j-api", repository_name = "maven_deps"),
        artifact("org.slf4j:slf4j-simple", repository_name = "maven_deps"),
        artifact("com.fasterxml.jackson.core:jackson-databind", repository_name = "maven_deps"),
        artifact("com.squareup.okhttp3:okhttp", repository_name = "maven_deps"),
        artifact("commons-io:commons-io", repository_name = "maven_deps"),
        artifact("joda-time:joda-time", repository_name = "maven_deps"),
        artifact("com.google.code.gson:gson", repository_name = "maven_deps"),
        artifact("org.json:json", repository_name = "maven_deps"),
    ],
)
